fix - spacing of avatar image

--- a/styles/compiled/styles.css
+++ b/styles/compiled/styles.css
@@ -109,8 +109,14 @@ h3 {
     max-height: 200px;
     background-size: cover;
     border-radius: 50%;
-    margin: 5px auto 0 auto;
-    box-shadow: 1px 2px 7px lightgray; }
+    box-shadow: 1px 2px 7px lightgray;
+    margin: 20px auto -20px auto; }
+    @media only screen and (max-width: 320px) {
+      .welcome-section .avatar {
+        margin: 5px auto 0 auto; } }
+    @media only screen and (max-width: 680px) {
+      .welcome-section .avatar {
+        margin: 5px auto -10px auto; } }
   .welcome-section .intro {
     display: flex;
     flex-direction: column;
