--- a/styles/main_page.scss
+++ b/styles/main_page.scss
@@ -91,8 +91,14 @@ h3 {
 		max-height: 200px;
 		background-size: cover;
 		border-radius: 50%;
-		margin: 5px auto 0 auto;
 		box-shadow: 1px 2px 7px lightgray;
+		margin: 20px auto -20px auto;
+		@media #{$break-small} {
+			margin: 5px auto 0 auto;
+		}
+		@media #{$break-med} {
+			margin: 5px auto -10px auto;
+		}
 	}
 
 	.intro {
